Fix RMApp background z-index

--- a/src/RMApp.css
+++ b/src/RMApp.css
@@ -11,6 +11,7 @@
     right: 0px;
     bottom: 0px;
     left: 0px;
+    z-index: -999; /* keep this layer back, since it's a background */
 
     background-image: url("./img/rm-background.png");
     background-size: cover;
